# tiled-array

./: CMakeLists.txt  readme.md
src/: 01-mpi.cpp  02-tiles.cpp  03-complete-example.cpp  04-pauli.cpp  05-contract-to-scalar.cpp  06-dot.cpp  07-argtype.cpp  08-conj.cpp  CMakeLists.txt  first.cpp
src/libs/: pauli.cpp  pauli.hpp
